--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "css-modules-typescript-loader": "^4.0.1",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
     "inline-source-map": "^0.6.2",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.18.0",
